--- a/package.json
+++ b/package.json
@@ -2,17 +2,69 @@
   "name": "enlarger",
   "version": "1.0.0",
   "description": "A image enlarger library for web app.",
-  "main": "index.js",
-  "scripts": {
-    "release": "npm publish --access=public && git push --follow-tags"
+  "author": {
+    "name": "elenh"
+  },
+  "license": "MIT",
+  "keywords": [
+    "image",
+    "magnifier"
+  ],
+  "type": "module",
+  "main": "./lib/enlarger.cjs",
+  "module": "./lib/enlarger.js",
+  "types": "./lib/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./lib/index.d.ts",
+      "require": "./lib/enlarger.cjs",
+      "import": "./lib/enlarger.js"
+    }
   },
   "files": [
     "lib"
   ],
-  "keywords": [],
-  "author": {
-    "name": "elenh",
-    "email": "yisiwings@163.com"
+  "scripts": {
+    "dev": "vite",
+    "build": "run-p type-check build-only",
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/",
+    "release": "npm run build:lib && npm run build:type && changelogen --release && npm publish --access=public && git push --follow-tags",
+    "build:app": "cross-env BUILD_TYPE=app vite build",
+    "build:lib": "cross-env BUILD_TYPE=lib vite build",
+    "build:type": "rollup -c rollup.dts.config.js"
   },
-  "license": "ISC"
+  "devDependencies": {
+    "@rushstack/eslint-patch": "^1.3.2",
+    "@tsconfig/node18": "^18.2.0",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^18.17.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.4.1",
+    "@vue/tsconfig": "^0.4.0",
+    "changelogen": "^0.5.4",
+    "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-vue": "^9.15.1",
+    "jsdom": "^22.1.0",
+    "npm-run-all": "^4.1.5",
+    "pinia": "^2.1.4",
+    "prettier": "^3.0.0",
+    "rollup": "^3.27.2",
+    "rollup-plugin-dts": "^5.3.1",
+    "sass": "^1.64.2",
+    "typescript": "~5.1.6",
+    "vite": "^4.4.6",
+    "vitest": "^0.33.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
+    "vue-tsc": "^1.8.6"
+  }
 }
