--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "changelogen": "^0.5.5",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
+    "demoify": "^2.1.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.2",
     "jsdom": "^23.0.1",
